--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.10.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
